<resources>
    <string name="app_name">Current Weather</string>

    <!-- Weather -->
    <string name="lbl_current_weather">Current Weather</string>
    <string name="lbl_latitude">Latitude</string>
    <string name="lbl_latitude_value">34.966671</string>
    <string name="lbl_longitude">Longitude</string>
    <string name="lbl_longitude_value">138.933334</string>
    <string name="lbl_country">Country</string>
    <string name="lbl_country_value">JP</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_description_value">Broken clouds</string>
    <string name="lbl_temperature">Temperature</string>
    <string name="lbl_temperature_value">297.77</string>
    <string name="lbl_humidity">Humidity</string>
    <string name="lbl_humidity_value">76</string>
    <string name="lbl_temperature_minimum">Temperature Minimum</string>
    <string name="lbl_temperature_minimum_value">297.77</string>
    <string name="lbl_temperature_maximum">Temperature Maximum</string>
    <string name="lbl_temperature_maximum_value">300.15</string>
    <string name="lbl_speed">Speed</string>
    <string name="lbl_speed_value">1.5</string>
    <string name="lbl_degree">Degree</string>
    <string name="lbl_degree_value">150</string>
    <string name="lbl_date_time">Date / Time</string>
    <string name="lbl_date_time_value">12-01-2018</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_name_value">San Diego</string>

    <!-- Weather -->
    <string name="lbl_weather_name">San Diego</string>
    <string name="lbl_weather_description">Moderate Rain</string>
    <string name="lbl_weather_temp">80°</string>
    <string name="lbl_weather_date">Nov 9, 2018 2:00:00 PM</string>
    <string name="lbl_weather_now_text">Now</string>
    <string name="lbl_weather_icon">Icon</string>
    <string name="lbl_weather_humidity_text">Humidity</string>
    <string name="lbl_weather_pressure_text">Pressure</string>
    <string name="lbl_weather_humidity">12%</string>
    <string name="lbl_weather_pressure">1014 hPA</string>

    <string name="btn_change_city">Change City</string>

    <!-- Weather Dialog -->
    <string name="weather_search_title">Search</string>
    <string name="weather_search_text">Change City</string>
    <string name="weather_search_hint">Enter City Name</string>
    <string name="weather_cancel_text">Cancel</string>
    <string name="weather_change_text">Change</string>
    <string name="weather_ok_text">Ok</string>
    <string name="weather_submit_text">Submit</string>

    <!-- Menu -->
    <string name="action_search">Search</string>

    <!-- Toast -->
    <string name="toast_no_internet_connection">No Internet Connection</string>
    <string name="toast_error_check_city">Error, Check City</string>

</resources>
