<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Weather Title Text -->
    <TextView
        android:id="@+id/txt_weather_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_twenty"
        android:layout_marginLeft="@dimen/margin_eight"
        android:layout_marginRight="@dimen/margin_eight"
        android:layout_marginStart="@dimen/margin_eight"
        android:layout_marginEnd="@dimen/margin_eight"
        android:textColor="@color/text_black"
        android:text="@string/weather_search_text"
        android:textSize="@dimen/text_twenty"
        android:textAlignment="center"
        android:gravity="center"
        android:textStyle="bold"
        android:paddingLeft="@dimen/padding_five"
        android:paddingRight="@dimen/padding_five"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Weather Edit Text -->
    <EditText
        android:id="@+id/edittxt_weather_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_twenty"
        android:layout_marginLeft="@dimen/margin_eight"
        android:layout_marginRight="@dimen/margin_eight"
        android:layout_marginStart="@dimen/margin_eight"
        android:layout_marginEnd="@dimen/margin_eight"
        android:textColor="@color/text_grey"
        android:hint="@string/weather_search_hint"
        android:textSize="@dimen/text_sixteen"
        android:textAlignment="textStart"
        android:gravity="start"
        android:paddingLeft="@dimen/padding_five"
        android:paddingRight="@dimen/padding_five"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_weather_title"/>

    <!-- Cancel Button -->
    <Button
        android:id="@+id/btn_weather_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_twenty"
        android:layout_marginLeft="@dimen/margin_zero"
        android:layout_marginRight="@dimen/margin_zero"
        android:background="@drawable/button_shaded_radius_zero"
        android:text="@string/weather_cancel_text"
        android:textSize="@dimen/text_fifteen"
        android:textColor="@color/text_white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_weather_submit"
        app:layout_constraintTop_toBottomOf="@+id/edittxt_weather_search"/>

    <!-- Submit Button -->
    <Button
        android:id="@+id/btn_weather_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_twenty"
        android:layout_marginLeft="@dimen/margin_zero"
        android:layout_marginRight="@dimen/margin_zero"
        android:background="@drawable/button_shaded_radius_zero"
        android:text="@string/weather_submit_text"
        android:textSize="@dimen/text_fifteen"
        android:textColor="@color/text_white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/btn_weather_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittxt_weather_search"/>

</android.support.constraint.ConstraintLayout>
